// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeDetail /> should correctly render a className 1`] = `
<div
  className="p2 bg-white rounded py6"
  style={
    Object {
      "flex": 5,
    }
  }
>
  <span>
    <h2
      className="h2"
    >
      
    </h2>
    <h4>
      
    </h4>
  </span>
  <img
    alt=""
    className="rounded fit"
    src=""
  />
  <h3>
    Ingredients
  </h3>
  <ul />
  <h3>
    Steps
  </h3>
  <ol />
</div>
`;

exports[`<RecipeDetail /> should correctly render a recipe 1`] = `
<div
  className="p2 bg-white rounded ml4"
  style={
    Object {
      "flex": 5,
    }
  }
>
  <span>
    <h2
      className="h2"
    >
      test recipe
    </h2>
    <h4>
      test category
    </h4>
  </span>
  <img
    alt="test recipe"
    className="rounded fit"
    src=""
  />
  <h3>
    Ingredients
  </h3>
  <ul>
    <li>
      ing1
    </li>
    <li>
      ing2
    </li>
  </ul>
  <h3>
    Steps
  </h3>
  <ol>
    <li>
      step1
    </li>
    <li>
      step2
    </li>
  </ol>
</div>
`;

exports[`<RecipeDetail /> should render without props 1`] = `
<div
  className="p2 bg-white rounded ml4"
  style={
    Object {
      "flex": 5,
    }
  }
>
  <span>
    <h2
      className="h2"
    >
      
    </h2>
    <h4>
      
    </h4>
  </span>
  <img
    alt=""
    className="rounded fit"
    src=""
  />
  <h3>
    Ingredients
  </h3>
  <ul />
  <h3>
    Steps
  </h3>
  <ol />
</div>
`;
